header and footer changes

--- a/html.html
+++ b/html.html
@@ -4,7 +4,12 @@
 	<title>Form Tag</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 
-
+	<style type="text/css">
+		#header, #footer{
+			background: gold;
+			color: darkred;
+		}
+	</style>
 </head>
 <body>
 	<div id="allRoot">
